about page done

--- a/about.html
+++ b/about.html
@@ -16,7 +16,55 @@
                 <li><a href="drawings.html">Drawings</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
-    </div>
+        </div>
+        <div class="main-content">
+            <div class="left-main">
+                <div class="p-sketches">Pencil Sketches</div>
+                <div class="p-varieties">Varieties :</div>
+                <div class="p-types">
+                    <ul>
+                        <li>Black&White Sketches</li>
+                        <li>Colour Pencil Sketches</li>
+                        <li>Single Colour Sketches</li>
+                        <li>HyperRealistic Sketches</li>
+                    </ul>
+                </div>
+               <details  class="p-details" >
+                <ul>
+                    <li>Black&White Sketches     - 1100/-</li>
+                    <li>Colour Pencil Sketches   - 1300/-</li>
+                    <li>Single Colour Sketches   - 1100/-</li>
+                    <li>HyperRealistic Sketches  - 1400/-</li>
+                </ul>
+               </details>
+               <div class="d-order">
+                <a href="contact.html">Place Your Order</a>
+            </div>
+            </div>
+            <div class="right-main">
+                <div class="d-sketches">Digital Sketches</div>
+                <div class="d-varieties">Varieties :</div>
+                <div class="d-types">
+                    <ul>
+                        <li>Black&White Sketches</li>
+                        <li>Colour Pencil Sketches</li>
+                        <li>Single Colour Sketches</li>
+                        <li>HyperRealistic Sketches</li>
+                    </ul>
+                </div>
+                <details  class="d-details" >
+                    <ul>
+                        <li>Black&White Sketches     - 1100/-</li>
+                        <li>Colour Pencil Sketches   - 1300/-</li>
+                        <li>Single Colour Sketches   - 1100/-</li>
+                        <li>HyperRealistic Sketches  - 1400/-</li>
+                    </ul>
+                   </details>
+                   <div class="p-order">
+                    <a href="contact.html">Place Your Order</a>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
