changes in about page

--- a/about.html
+++ b/about.html
@@ -18,6 +18,7 @@
             </ul>
         </div>
         <div class="main-content">
+            <div class="left-image"><img src="orderimage.png" alt=""></div>
             <div class="left-main">
                 <div class="p-sketches">Pencil Sketches</div>
                 <div class="p-varieties">Varieties :</div>
@@ -40,7 +41,9 @@
                <div class="d-order">
                 <a href="contact.html">Place Your Order</a>
             </div>
+     
             </div>
+            <div class="right-image"><img src="orderimage.png" alt=""></div>
             <div class="right-main">
                 <div class="d-sketches">Digital Sketches</div>
                 <div class="d-varieties">Varieties :</div>
