side bar added on contact page

--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="contact.css">
 </head>
 <body>
+    <div class="main">
+        <div class="sidebar">
+            <ul>
+                <li><h2>DD</h2></li>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="drawings.html">Drawings</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </div>
+    </div>
     
 </body>
 </html>
